sub/107/build.log
Main.cpp:1:1: error: 'import' does not name a type
 import java.util.*;
 ^
Main.cpp:4:10: error: expected ':' before 'static'
   public static void main(String[] args) {
          ^
Main.cpp:4:27: error: 'String' has not been declared
   public static void main(String[] args) {
                           ^
Main.cpp:4:36: error: expected ',' or '...' before 'args'
   public static void main(String[] args) {
                                    ^
Main.cpp:27:1: error: expected ';' after class definition
 }
 ^
Main.cpp: In static member function 'static void ch2_01_array_vector::main(int*)':
Main.cpp:6:8: error: expected unqualified-id before '[' token
     int[] arr = new int[] {7,7,7,0,0};
        ^
Main.cpp:8:5: error: 'Vector' was not declared in this scope
     Vector<Integer> v = new Vector<Integer>(Collections.nCopies(5, 5));
     ^
Main.cpp:8:12: error: 'Integer' was not declared in this scope
     Vector<Integer> v = new Vector<Integer>(Collections.nCopies(5, 5));
            ^
Main.cpp:8:21: error: 'v' was not declared in this scope
     Vector<Integer> v = new Vector<Integer>(Collections.nCopies(5, 5));
                     ^
Main.cpp:8:29: error: 'Vector' does not name a type
     Vector<Integer> v = new Vector<Integer>(Collections.nCopies(5, 5));
                             ^
Main.cpp:8:45: error: 'Collections' was not declared in this scope
     Vector<Integer> v = new Vector<Integer>(Collections.nCopies(5, 5));
                                             ^
Main.cpp:11:5: error: 'System' was not declared in this scope
     System.out.println("arr[2] = " + arr[2] + " and v[2] = " + v.get(2));
     ^
Main.cpp:11:38: error: 'arr' was not declared in this scope
     System.out.println("arr[2] = " + arr[2] + " and v[2] = " + v.get(2));
                                      ^
